# ds-protocol-soap-py-lib

./: CONTRIBUTING.md  Makefile  PyPI.md  README.md  pyproject.toml
.config/: mypy.ini  pytest.ini  ruff.toml
.github/workflows/: release.yaml
docs/source/: conf.py  index.rst
examples/: 01_read_dataset.py  02_write_dataset.py  03_write_file_basic_with_token_exchange.py
src/ds_protocol_soap_py_lib/: __init__.py  enums.py  resource.yaml
src/ds_protocol_soap_py_lib/dataset/: __init__.py  soap.py
src/ds_protocol_soap_py_lib/linked_service/: __init__.py  config.py  soap.py
tests/: __init__.py  mocks.py  test_enums.py  test_version.py
tests/dataset/: __init__.py  test_dataset_soap.py
tests/linked_service/: __init__.py  test_linked_service_soap.py
