[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ds-protocol-soap-py-lib"
version = "0.1.0-alpha.2"
description = "A Python package from the DS library collection"
dependencies = [
    "ds-common-logger-py-lib>=0.1.0a5",
    "ds-resource-plugin-py-lib>=0.1.0a4",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "zeep>=4.3.2",
]
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE-APACHE"]
keywords = ["ds", "python"]
authors = [
    {name = "Jens Junker Pedersen", email = "hello@grasplabs.com"}
]
maintainers = [
    {name = "Jens Junker Pedersen", email = "hello@grasplabs.com"}
]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "PyPI.md"

[project.urls]
Documentation = "https://grasp-labs.github.io/ds-protocol-soap-py-lib/"
Repository = "https://github.com/grasp-labs/ds-protocol-soap-py-lib/"
Issues = "https://github.com/grasp-labs/ds-protocol-soap-py-lib/issues/"
Changelog = "https://github.com/grasp-labs/ds-protocol-soap-py-lib/releases"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.8",
    "mypy>=1.7.0",
    "types-requests>=2.32.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pre-commit>=3.6.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "sphinx>=7.1.0",
    "sphinx-autoapi>=3.0.0",
    "sphinx-material>=0.0.35",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-autoapi>=3.0.0",
    "sphinx-material>=0.0.35",
]

[tool.setuptools]
include-package-data = true

[project.entry-points."ds.protocols"]
soap = "ds_protocol_soap_py_lib"

[tool.setuptools.package-data]
ds_protocol_soap_py_lib = ["resource.yaml", "py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.0.260204",
]
